--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,7 @@
         <a href="{{site.baseurl}}/activities/">Activities</a>
         <a href="{{site.baseurl}}/teaching/">Teaching</a>
         <a href="{{site.baseurl}}/blog/">Blog</a>
-        <a href="{{site.baseurl}}/misc/">misc</a>
+        <a href="{{site.baseurl}}/misc/">Misc</a>
         <!-- <a href="https://www.linkedin.com/in/lorenzocarnevale/recent-activity/shares/">News</a> -->
 </div>
 <br>
