Add publications and projects

--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -8,7 +8,7 @@ $spacing-unit:     30px;
 $light-gray: gray;
 $text-color:       #333;
 $background-color: #fdfdfd;
-$brand-color:      #211a6e;
+$brand-color:      #3f33c0;
 
 // Color scheme for light
 $body-bg: #fdfdfd;
