Fixing MathJax not rendering

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,9 +6,13 @@ layout: default
 
 {{content}}
 
+
 <!-- Comments only for posts -->
 {% if page.path contains '_posts' %}
     {% if site.disqus-shortname %}
         {% include disqus.html %}
     {% endif %}
 {% endif %}
+
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript" ></script>
+<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } }); </script>
