Update the background color for dark mode

--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -124,7 +124,7 @@ blockquote {
   a {
     &:hover {
       background-color: transparent;
-      color: #333;
+      color: #f7f7f7;
     }
   }
 
