Update the background color for dark mode

--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -16,7 +16,7 @@ $projectbox: #cfe6a4;
 $text-color: #333;
 
 // Color scheme for dark modes
-$body-bg-dark: #dbeaf7;
+$body-bg-dark: #fcfcfc;
 $projectbox-dark: lighten($body-bg-dark, 10%);
 $text-color-dark: #777;
 
