--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -11,12 +11,12 @@ $background-color: #fdfdfd;
 $brand-color:      #2d84ac;
 
 // Color scheme for light
-$body-bg: #fdfdfd;
+$body-bg: #ffffff;
 $projectbox: #cfe6a4;
 $text-color: #333;
 
 // Color scheme for dark modes
-$body-bg-dark: #fcfcfc;
+$body-bg-dark: #ffffff;
 $projectbox-dark: lighten($body-bg-dark, 10%);
 $text-color-dark: #777;
 
