--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -7,7 +7,7 @@ $base-line-height: 1.7;
 $spacing-unit:     30px;
 $light-gray: gray;
 $text-color:       #333;
-$background-color: #fdfdfd;
+$background-color: #ffffff;
 $brand-color:      #2d84ac;
 
 // Color scheme for light
