Update navigations and Publication and Awards

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
         <a href="{{site.baseurl}}/research/">Research</a>
         <a href="{{site.baseurl}}/publications/">Publications</a>
         <a href="{{site.baseurl}}/projects/">Projects</a>
-        <a href="{{site.baseurl}}/activities/">Activities</a>
+        <a href="{{site.baseurl}}/work-experience-and-awards/">Work Experience and Awards</a>
         <a href="{{site.baseurl}}/teaching/">Teaching</a>
         <a href="{{site.baseurl}}/blog/">Blog</a>
         <a href="{{site.baseurl}}/misc/">Misc</a>
